--- a/P2_FixAnAppDotNetCode/Resources/Models/Order.en.resx
+++ b/P2_FixAnAppDotNetCode/Resources/Models/Order.en.resx
@@ -117,8 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ErrorMissingAdress" xml:space="preserve">
-    <value>Please enter an adress</value>
+  <data name="ErrorMissingAddress" xml:space="preserve">
+    <value>Please enter an address</value>
   </data>
   <data name="ErrorMissingCity" xml:space="preserve">
     <value>Please enter a city name</value>
